--- a/css/main.css
+++ b/css/main.css
@@ -210,12 +210,28 @@ nav{
 	min-height: auto;
 	border-radius: 0 0 50px 50px;
 	box-shadow: 2px 2px 12px #737373;
-	padding-top: 8rem;
+	padding-top: 4rem;
 	padding-bottom: 5rem;
 
 
 }
- 
+
+.warning{
+	display: flex;
+	justify-content: center;
+	color: red;
+	background: white;
+}
+.warning a{
+	color: red;
+	padding: 5px;
+	font-size: 1.5rem;
+	text-decoration: none;
+}
+.warning a:hover{
+	color: blueviolet;
+}
+
 .left-right{
 	display: flex;
 	justify-content: center;
@@ -257,7 +273,7 @@ nav{
 
 .social{
 	display: flex;
-	padding-left: 40%;
+	justify-content: center;
 	margin-top: 15rem;
 }
 
@@ -304,6 +320,20 @@ nav{
 	width: 300px;
 }
 
+}
+
+@media only screen and (max-width: 600px){
+	#home{
+		padding-top: 2rem;
+		padding-bottom: 2rem;
+	}
+	.social{
+		margin-top: 8rem;
+	}
+	.social a{
+		padding: 0.5rem;
+		font-size: 1rem;
+	}
 }
 
 /*================ End Home ==================*/
